--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,27 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+    "name": "STM8-gdb",
+    "type": "cppdbg",
+    "request": "launch",
+    "program": "${workspaceRoot}/build/main.elf",
+    "args": [],
+    "stopAtEntry": true,
+    "cwd": "${workspaceRoot}",
+    "environment": [],
+    "externalConsole": false,
+    "MIMode": "gdb",
+    "miDebuggerPath": "stm8-gdb",
+    "setupCommands": [
         {
-            "name": "(Windows) Launch",
-            "type": "cppvsdbg",
-            "request": "launch",
-            "program": "enter program name, for example ${workspaceFolder}/app/src/main.c",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "console": "externalTerminal"
-        }
-    ]
+            "description": "connect to target",
+            "text": "-target-select extended-remote localhost:3333",
+            "ignoreFailures": true
+        },
+    ],
+    "logging": {
+        "moduleLoad": true,
+        "trace": true,
+        "engineLogging": true,
+        "programOutput": true,
+        "exceptions": true
+    },
 }
