--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "stm8s.h": "c",
-        "pwm.h": "c",
-        "type_traits": "c"
-    }
+        "type_traits": "c",
+        "stm8s_exti.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
