dht11 step forward

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdio.h": "c",
         "liquidcrystal_i2c.h": "c",
         "serial.h": "c",
-        "dht.h": "c"
+        "dht.h": "c",
+        "type_traits": "c"
     }
 }
