--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "lcd.h": "c",
         "encoder.h": "c",
         "ui.h": "c",
-        "dsrtc.h": "c"
+        "dsrtc.h": "c",
+        "type_traits": "c"
     }
 }
