--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,5 @@
 {
     "files.associations": {
-        "UI.C": "cpp",
-        "stm8s.h": "c",
-        "serial.h": "c",
-        "lcd.h": "c",
-        "encoder.h": "c",
-        "ui.h": "c",
-        "dsrtc.h": "c",
-        "type_traits": "c"
+        "*.tcc": "c"
     }
 }
